--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h2><a class="link" >Alladin2</a></h2>
                 </div>
                 <div class="tile" id="pokemon">
-                    <img src="img/pokemon.jpg" alt="" id="img">
+                    <img src="img/pokemon2.jpg" alt="" id="img">
                     <h2><a class="link" >Pokemon</a></h2>
                 </div>
                 <div class="tile" id ="batman">
@@ -84,7 +84,7 @@
                     <h2><a class="link" >Batman</a></h2>
                 </div>
                 <div class="tile" id="courage">
-                    <img src="img/courage.jpg" alt="" id="img">
+                    <img src="img/courage2.jpg" alt="" id="img">
                     <h2><a class="link" >Courage</a></h2>
                 </div>
                 <div class="tile" id="mario">
